@@ -166,20 +166,4 @@ subprojects {
             jvmTarget = JvmTarget.JVM_1_8
         }
     }
-
-    if (JavaVersion.current() >= JavaVersion.VERSION_16) {
-        test {
-            jvmArgs = [
-                    "--illegal-access=permit",
-                    "--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-                    "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-                    "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
-                    "--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED",
-                    "--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-                    "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
-                    "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-                    "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"
-            ]
-        }
-    }
 }
